# fatcat

proposals/: 2020_client_cli.md
rust/: Cargo.toml
rust/fatcat-cli/: Cargo.toml  README
rust/fatcat-cli/src/: main.rs  util.rs
